fixed contact form's height to enable proper viewing on mobile device

--- a/css/style.css
+++ b/css/style.css
@@ -1482,7 +1482,7 @@ h4 {
     }
     #mobile-menu {
         width: 100%;
-        height: 800px;
+        height: 500px;
         position: absolute;
         top: 0;
         background-color: rgba(0,0,0,0.7);
@@ -1532,11 +1532,11 @@ h4 {
    .wasel-quote {
     padding: 0.9em;
    }
-   .contact-info li {
+   /*.contact-info li {
     display: block;
     padding: 0;
     font-size: 1.2em;
-    }
+    }*/
     #credits {
     float: left;
     padding: 0.5em 0;
@@ -1736,9 +1736,9 @@ h4 {
     .inspiration-source {
         min-height: 30%;
     }
-    iframe {
+    /*iframe {
         height: 178px;
-    }
+    }*/
     .img-container img,
     .img-container,
     .inspiration-pic1 .img-container,
